--- a/.index.html
+++ b/.index.html
@@ -8,6 +8,11 @@
     </head>
     <Body>
         <h1>Odin Recipies</h1>
-        <a href="recipes/Salmon.html">Salmon Recipe</a>
+        <ul>
+            <li><a href="recipes/Salmon.html">Salmon Recipe</a></li>
+            <li><a href="recipes/toast.html">Toast Recipe</a></li>
+            <li><a href="recipes/ramen.html">Ramen Recipe</a></li>
+        </ul>
+
     </Body>
 </html>
