set .index.html to just index.html

--- a/recipes/Salmon.html
+++ b/recipes/Salmon.html
@@ -9,7 +9,7 @@
     <Body>
         <h1>Salmon Recipe</h1>
 
-        <p><a href="../.index.html">Home</a></p>
+        <p><a href="../index.html">Home</a></p>
         
         <img src="../Images/salmon.jpg" height="600" width="600">
 
