--- a/recipes/toast.html
+++ b/recipes/toast.html
@@ -9,7 +9,7 @@
     <Body>
         <h1>Toast Recipe</h1>
 
-        <p><a href="../.index.html">Home</a></p>
+        <p><a href="../index.html">Home</a></p>
         
         <img src="../Images/bread.webp" height="600" width="600">
 
