--- a/recipes/ramen.html
+++ b/recipes/ramen.html
@@ -9,7 +9,7 @@
     <Body>
         <h1>Ramen Recipe</h1>
 
-        <p><a href="../.index.html">Home</a></p>
+        <p><a href="../index.html">Home</a></p>
         
         <img src="../Images/ramen.webp" height="600" width="600">
 
